// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelpForcedTooltip should display element tooltip on mouse click 1`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
}

<div>
  <div>
    <span
      class=""
      data-mui-internal-clone-element="true"
      style="padding: 8px; vertical-align: middle; text-align: center; display: inline-flex;"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-0"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M15.07,11.25L14.17,12.17C13.45,12.89 13,13.5 13,15H11V14.5C11,13.39 11.45,12.39 12.17,11.67L13.41,10.41C13.78,10.05 14,9.55 14,9C14,7.89 13.1,7 12,7A2,2 0 0,0 10,9H8A4,4 0 0,1 12,5A4,4 0 0,1 16,9C16,9.88 15.64,10.67 15.07,11.25M13,19H11V17H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`HelpForcedTooltip should display element tooltip on mouse click 2`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
}

.emotion-1 {
  z-index: 1500;
  pointer-events: auto;
}

.emotion-2 {
  background-color: rgba(97, 97, 97, 0.92);
  border-radius: 4px;
  color: #fff;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  padding: 4px 8px;
  font-size: 0.6875rem;
  max-width: 300px;
  margin: 2px;
  word-wrap: break-word;
  font-weight: 500;
}

.MuiTooltip-popper[data-popper-placement*="left"] .emotion-2 {
  transform-origin: right center;
  margin-right: 14px;
}

.MuiTooltip-popper[data-popper-placement*="right"] .emotion-2 {
  transform-origin: left center;
  margin-left: 14px;
}

.MuiTooltip-popper[data-popper-placement*="top"] .emotion-2 {
  transform-origin: center bottom;
  margin-bottom: 14px;
}

.MuiTooltip-popper[data-popper-placement*="bottom"] .emotion-2 {
  transform-origin: center top;
  margin-top: 14px;
}

<div>
  <div>
    <span
      aria-labelledby=":r3:"
      class=""
      data-mui-internal-clone-element="true"
      style="padding: 8px; vertical-align: middle; text-align: center; display: inline-flex;"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-0"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M15.07,11.25L14.17,12.17C13.45,12.89 13,13.5 13,15H11V14.5C11,13.39 11.45,12.39 12.17,11.67L13.41,10.41C13.78,10.05 14,9.55 14,9C14,7.89 13.1,7 12,7A2,2 0 0,0 10,9H8A4,4 0 0,1 12,5A4,4 0 0,1 16,9C16,9.88 15.64,10.67 15.07,11.25M13,19H11V17H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z"
        />
      </svg>
    </span>
    <div
      class="MuiTooltip-popper MuiTooltip-popperInteractive emotion-1 MuiPopper-root"
      data-popper-escaped=""
      data-popper-placement="bottom"
      data-popper-reference-hidden=""
      id=":r3:"
      role="tooltip"
      style="position: absolute; top: 0px; left: 0px; margin: 0px; transform: translate(0px, 0px);"
    >
      <div
        class="MuiTooltip-tooltip MuiTooltip-tooltipPlacementBottom emotion-2"
        style="opacity: 1; transform: scale(1, 1); transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 133ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      >
        fake-tooltip
      </div>
    </div>
  </div>
</div>
`;

exports[`HelpForcedTooltip should display element tooltip on mouse over only 1`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
}

<div>
  <div>
    <span
      class=""
      data-mui-internal-clone-element="true"
      style="padding: 8px; vertical-align: middle; text-align: center; display: inline-flex;"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-0"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M15.07,11.25L14.17,12.17C13.45,12.89 13,13.5 13,15H11V14.5C11,13.39 11.45,12.39 12.17,11.67L13.41,10.41C13.78,10.05 14,9.55 14,9C14,7.89 13.1,7 12,7A2,2 0 0,0 10,9H8A4,4 0 0,1 12,5A4,4 0 0,1 16,9C16,9.88 15.64,10.67 15.07,11.25M13,19H11V17H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`HelpForcedTooltip should display element tooltip on mouse over only 2`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
}

.emotion-1 {
  z-index: 1500;
  pointer-events: auto;
}

.emotion-2 {
  background-color: rgba(97, 97, 97, 0.92);
  border-radius: 4px;
  color: #fff;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  padding: 4px 8px;
  font-size: 0.6875rem;
  max-width: 300px;
  margin: 2px;
  word-wrap: break-word;
  font-weight: 500;
}

.MuiTooltip-popper[data-popper-placement*="left"] .emotion-2 {
  transform-origin: right center;
  margin-right: 14px;
}

.MuiTooltip-popper[data-popper-placement*="right"] .emotion-2 {
  transform-origin: left center;
  margin-left: 14px;
}

.MuiTooltip-popper[data-popper-placement*="top"] .emotion-2 {
  transform-origin: center bottom;
  margin-bottom: 14px;
}

.MuiTooltip-popper[data-popper-placement*="bottom"] .emotion-2 {
  transform-origin: center top;
  margin-top: 14px;
}

<div>
  <div>
    <span
      aria-labelledby=":r2:"
      class=""
      data-mui-internal-clone-element="true"
      style="padding: 8px; vertical-align: middle; text-align: center; display: inline-flex;"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-0"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M15.07,11.25L14.17,12.17C13.45,12.89 13,13.5 13,15H11V14.5C11,13.39 11.45,12.39 12.17,11.67L13.41,10.41C13.78,10.05 14,9.55 14,9C14,7.89 13.1,7 12,7A2,2 0 0,0 10,9H8A4,4 0 0,1 12,5A4,4 0 0,1 16,9C16,9.88 15.64,10.67 15.07,11.25M13,19H11V17H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z"
        />
      </svg>
    </span>
    <div
      class="MuiTooltip-popper MuiTooltip-popperInteractive emotion-1 MuiPopper-root"
      data-popper-escaped=""
      data-popper-placement="bottom"
      data-popper-reference-hidden=""
      id=":r2:"
      role="tooltip"
      style="position: absolute; top: 0px; left: 0px; margin: 0px; transform: translate(0px, 0px);"
    >
      <div
        class="MuiTooltip-tooltip MuiTooltip-tooltipPlacementBottom emotion-2"
        style="opacity: 1; transform: scale(1, 1); transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 133ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      >
        fake-tooltip
      </div>
    </div>
  </div>
</div>
`;

exports[`HelpForcedTooltip should display element tooltip on mouse over only 3`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
}

<div>
  <div>
    <span
      class=""
      data-mui-internal-clone-element="true"
      style="padding: 8px; vertical-align: middle; text-align: center; display: inline-flex;"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-0"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M15.07,11.25L14.17,12.17C13.45,12.89 13,13.5 13,15H11V14.5C11,13.39 11.45,12.39 12.17,11.67L13.41,10.41C13.78,10.05 14,9.55 14,9C14,7.89 13.1,7 12,7A2,2 0 0,0 10,9H8A4,4 0 0,1 12,5A4,4 0 0,1 16,9C16,9.88 15.64,10.67 15.07,11.25M13,19H11V17H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`HelpForcedTooltip should display text tooltip on mouse click 1`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
}

<div>
  <div>
    <span
      class=""
      data-mui-internal-clone-element="true"
      style="padding: 8px; vertical-align: middle; text-align: center; display: inline-flex;"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-0"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M15.07,11.25L14.17,12.17C13.45,12.89 13,13.5 13,15H11V14.5C11,13.39 11.45,12.39 12.17,11.67L13.41,10.41C13.78,10.05 14,9.55 14,9C14,7.89 13.1,7 12,7A2,2 0 0,0 10,9H8A4,4 0 0,1 12,5A4,4 0 0,1 16,9C16,9.88 15.64,10.67 15.07,11.25M13,19H11V17H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`HelpForcedTooltip should display text tooltip on mouse over only 1`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
}

<div>
  <div>
    <span
      class=""
      data-mui-internal-clone-element="true"
      style="padding: 8px; vertical-align: middle; text-align: center; display: inline-flex;"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-0"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M15.07,11.25L14.17,12.17C13.45,12.89 13,13.5 13,15H11V14.5C11,13.39 11.45,12.39 12.17,11.67L13.41,10.41C13.78,10.05 14,9.55 14,9C14,7.89 13.1,7 12,7A2,2 0 0,0 10,9H8A4,4 0 0,1 12,5A4,4 0 0,1 16,9C16,9.88 15.64,10.67 15.07,11.25M13,19H11V17H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`HelpForcedTooltip should display text tooltip on mouse over only 2`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
}

.emotion-1 {
  z-index: 1500;
  pointer-events: auto;
}

.emotion-2 {
  background-color: rgba(97, 97, 97, 0.92);
  border-radius: 4px;
  color: #fff;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  padding: 4px 8px;
  font-size: 0.6875rem;
  max-width: 300px;
  margin: 2px;
  word-wrap: break-word;
  font-weight: 500;
}

.MuiTooltip-popper[data-popper-placement*="left"] .emotion-2 {
  transform-origin: right center;
  margin-right: 14px;
}

.MuiTooltip-popper[data-popper-placement*="right"] .emotion-2 {
  transform-origin: left center;
  margin-left: 14px;
}

.MuiTooltip-popper[data-popper-placement*="top"] .emotion-2 {
  transform-origin: center bottom;
  margin-bottom: 14px;
}

.MuiTooltip-popper[data-popper-placement*="bottom"] .emotion-2 {
  transform-origin: center top;
  margin-top: 14px;
}

<div>
  <div>
    <span
      aria-labelledby=":r1:"
      class=""
      data-mui-internal-clone-element="true"
      style="padding: 8px; vertical-align: middle; text-align: center; display: inline-flex;"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-0"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M15.07,11.25L14.17,12.17C13.45,12.89 13,13.5 13,15H11V14.5C11,13.39 11.45,12.39 12.17,11.67L13.41,10.41C13.78,10.05 14,9.55 14,9C14,7.89 13.1,7 12,7A2,2 0 0,0 10,9H8A4,4 0 0,1 12,5A4,4 0 0,1 16,9C16,9.88 15.64,10.67 15.07,11.25M13,19H11V17H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z"
        />
      </svg>
    </span>
    <div
      class="MuiTooltip-popper MuiTooltip-popperInteractive emotion-1 MuiPopper-root"
      data-popper-escaped=""
      data-popper-placement="bottom"
      data-popper-reference-hidden=""
      id=":r1:"
      role="tooltip"
      style="position: absolute; top: 0px; left: 0px; margin: 0px; transform: translate(0px, 0px);"
    >
      <div
        class="MuiTooltip-tooltip MuiTooltip-tooltipPlacementBottom emotion-2"
        style="opacity: 1; transform: scale(1, 1); transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 133ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      >
        fake-tooltip
      </div>
    </div>
  </div>
</div>
`;

exports[`HelpForcedTooltip should display text tooltip on mouse over only 3`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
}

<div>
  <div>
    <span
      class=""
      data-mui-internal-clone-element="true"
      style="padding: 8px; vertical-align: middle; text-align: center; display: inline-flex;"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-0"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M15.07,11.25L14.17,12.17C13.45,12.89 13,13.5 13,15H11V14.5C11,13.39 11.45,12.39 12.17,11.67L13.41,10.41C13.78,10.05 14,9.55 14,9C14,7.89 13.1,7 12,7A2,2 0 0,0 10,9H8A4,4 0 0,1 12,5A4,4 0 0,1 16,9C16,9.88 15.64,10.67 15.07,11.25M13,19H11V17H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z"
        />
      </svg>
    </span>
  </div>
</div>
`;
